# enhanced-terminal-mcp

./: .gitignore  .rules  CHANGELOG.md  Cargo.toml  DUAL_BOOT_RESIZE_GUIDE.md  EVENT_LOGGER_README.md  FEDORA_LOGIN_FIX.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LIVE_TEST_RESULTS.md  PARTITION_RESIZE_GUIDE.md  QUICK_START_EVENT_LOGGER.md  README.md  SIMPLE_RESIZE_GUIDE.md  SUMMARY.md  install-event-logger.sh  manual_test.md  screen-lock-monitor.service  screen-lock-monitor.sh  sddm-fix.conf  system-event-boot.service  system-event-logger.sh  system-event-login.service  system-event-logout.service  system-event-shutdown.service  test_mcp.sh  test_new_features.md  test_timeout_fix.sh  uninstall-event-logger.sh
docs/: BUGFIX_TOOL_NAMING.md  CHANGELOG.md  COMMAND_TIMEOUT_DIAGNOSIS.md  DEBUGGING_TIMEOUT_ISSUE.md  FEATURES.md  FEATURES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  JOB_LIST_TIMEOUT_ANALYSIS.md  LIVE_TEST_RESULTS.md  MIGRATION_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  STREAMING_IMPLEMENTATION_SUMMARY.md  STREAMING_MODE.md  STREAMING_OUTPUT.md  TIMEOUT_FIX.md  TIMEOUT_FIX_SUMMARY.md  TIMEOUT_INVESTIGATION.md  TIMEOUT_REFACTOR_SUMMARY.md
src/: main.rs  server.rs
src/detection/: binary_detector.rs  mod.rs
src/tools/: denylist.rs  job_manager.rs  mod.rs  terminal_executor.rs
tests/: mcp_client.rs
